# sqlite3ext_geomag

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.3
src/: Makefile.am  Makefile.in  sqlite3ext_geomag.c  sqlite3ext_geomag.h
test/: test001-basic.sh  test001-basic.sql
